<?xml version="1.0" encoding="utf-8"?>

    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.popularmovies.MovieDetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkGray"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/backdrop_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    />

                <include
                    android:id="@+id/movie_specs_info"
                    layout="@layout/movie_specs_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/poster_padding"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/overview_header"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/overview_header"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_movie_overview"
                    android:textColor="@color/white"
                    android:text="Some movie where someone, played by someone you know, does something crazy. Action and love scenes abound. Everything works
                out in the end."
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="@dimen/poster_padding"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:id="@+id/trailer_box"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/trailer_header"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/trailer_header"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rv_trailers"
                        android:paddingBottom="@dimen/poster_padding"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-200dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_no_internet_error_message_trailers"
                        android:text="@string/no_internet_error_message"
                        android:textSize="20sp"
                        android:padding="25dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-100dp"
                        android:id="@+id/no_trailers_found"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:text="@string/no_trailers_found_message"
                        android:textSize="15sp"
                        android:padding="25dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:id="@+id/review_box"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/review_header"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/review_header"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rv_reviews"
                        android:paddingBottom="@dimen/poster_padding"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-200dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_no_internet_error_message"
                        android:text="@string/no_internet_error_message"
                        android:textSize="20sp"
                        android:padding="25dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-100dp"
                        android:textColor="@color/white"
                        android:id="@+id/no_reviews_found"
                        android:text="@string/no_reviews_found_message"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:padding="25dp"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </layout>